[gd_scene load_steps=6 format=3 uid="uid://cy60l18oom7t4"]

[ext_resource type="Script" uid="uid://b6h1uxwvxuqyw" path="res://landing_page.gd" id="1_svxo4"]
[ext_resource type="PackedScene" uid="uid://c514b3r6vchf6" path="res://starter_choice.tscn" id="2_msw7s"]
[ext_resource type="Texture2D" uid="uid://cny4ejqkxoswr" path="res://art/landing screen.png" id="2_v3fm6"]
[ext_resource type="PackedScene" uid="uid://85e2cixv0tag" path="res://main.tscn" id="3_etoe6"]
[ext_resource type="PackedScene" uid="uid://df2bkr58sc5dq" path="res://binder.tscn" id="4_3r04l"]

[node name="LandingPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_svxo4")
starter_scene = ExtResource("2_msw7s")
main_scene = ExtResource("3_etoe6")
binder_scene = ExtResource("4_3r04l")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
texture = ExtResource("2_v3fm6")

[node name="ChoseStarter" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 34.0
offset_right = 474.0
offset_bottom = 110.0
mouse_filter = 2
theme_override_constants/separation = 170

[node name="PlayButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 91.0
offset_top = 65.0
offset_right = 132.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 16
text = "Play"

[node name="CardListButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 91.0
offset_top = 112.0
offset_right = 149.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 16
text = "Binder"

[node name="OptionsButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 91.0
offset_top = 158.0
offset_right = 158.0
offset_bottom = 182.0
text = "Options
"

[node name="StatisticsButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 86.0
offset_top = 201.0
offset_right = 164.0
offset_bottom = 225.0
text = "Statistics
"

[node name="QuitButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 89.0
offset_top = 283.0
offset_right = 128.0
offset_bottom = 307.0
text = "Quit"

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="CardListButton" to="." method="_on_card_list_button_button_down"]
[connection signal="button_down" from="OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="QuitButton" to="." method="_on_quit_button_button_down"]
